versioned_docs/version-1.6.0/references/commands/cli/app/env/epinio_app_env_list.md
---
title: ""
sidebar_label: "epinio app env list"
---

<head>
  <link rel="canonical" href="https://docs.epinio.io/references/commands/cli/app/env/epinio_app_env_list"/>
</head>
## epinio app env list

Lists application environment

### Synopsis

Lists environment variables of named application

```
epinio app env list APPNAME [flags]
```

### Options

```
  -h, --help   help for list
```

### Options inherited from parent commands

```
  -c, --kubeconfig string        (KUBECONFIG) path to a kubeconfig, not required in-cluster
      --no-colors                Suppress colorized output
      --settings-file string     (EPINIO_SETTINGS) set path of settings file (default "~/.config/epinio/settings.yaml")
      --skip-ssl-verification    (SKIP_SSL_VERIFICATION) Skip the verification of TLS certificates
      --timeout-multiplier int   (EPINIO_TIMEOUT_MULTIPLIER) Multiply timeouts by this factor (default 1)
      --trace-level int          (TRACE_LEVEL) Only print trace messages at or above this level (0 to 255, default 0, print nothing)
      --verbosity int            (VERBOSITY) Only print progress messages at or above this level (0 or 1, default 0)
```

### SEE ALSO

* [epinio app env](./epinio_app_env.md)	 - Epinio application configuration

